# bdh-linux

./: LICENSE  README.md  ideas.txt
.github/workflows/: python-publish.yml
cli/: dist  pyproject.toml
cli/bdh_linux/: main.py
cli/bdh_linux/commands/: install.py  remove.py  setup.py
configs/: .zshrc  aliases.sh
scripts/: install-packages.sh  install.sh  remove-bloat.sh  setup.sh
