[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bdh-linux"
version = "v4.2.5"
description = "bdh-linux — Backend Developer OS setup tool for Arch/Manjaro"
readme = "README.md"

license = {text = "MIT"}

keywords = ["linux", "backend", "developer", "fastapi", "arch", "manjaro"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
requires-python = ">=3.10"
dependencies = [
    "typer",
    "rich",
]

[project.scripts]
bdh-linux = "bdh_linux.main:app"

[project.urls]
Homepage = "https://github.com/BackendDeveloperHub/bdh-linux"
Repository = "https://github.com/BackendDeveloperHub/bdh-linux"
